TESTS = 001_simple_fw.test \
	002_resource_subdir.test \
	003_write_offset.test \
	004_env_vars.test \
	005_define.test \
	006_metadata.test \
	007_mbr.test \
	008_partial_mbr.test \
	009_metadata_cmdline.test \
	010_fat_mkfs.test \
	011_fat_setlabel.test \
	012_fat_write.test \
	013_fat_mv.test \
	014_fat_cp.test \
	015_fat_bad_sha2.test \
	016_raw_bad_sha2.test \
	017_fat_rm.test \
	018_numeric_progress.test \
	019_quiet_progress.test \
	020_normal_progress.test \
	021_create_keys.test \
	022_signed_fw.test \
	023_missing_sig.test \
	024_metadata_sig.test \
	025_bad_sig.test \
	026_sign_again.test \
        027_fat_timestamp.test \
        028_osip.test \
	029_5G_offset.test \
	030_2T_offset.test \
	031_fat_mkfs_5G.test \
	032_fat_2T_offset.test \
	033_bad_host_path.test \
        034_missing_host_path.test \
        035_streaming.test \
        036_streaming_signed_fw.test \
        037_streaming_bad_sig.test \
        038_write_15M.test \
	039_upgrade.test \
	040_create_mini_fw.test \
	041_version.test \
	042_fat_am335x.test \
	043_fat_touch.test \
	044_require_file_exist.test \
	045_legacy_require_partition1.test \
	046_unknown_create_fails.test \
	047_unknown_apply_succeeds.test \
	048_assert_size_less_than_success.test \
	049_assert_size_less_than_fail.test \
	050_assert_size_greater_than_success.test \
	051_assert_size_greater_than_fail.test \
	052_file_concatenation.test

EXTRA_DIST = $(TESTS) common.sh 1K.bin 1K-corrupt.bin 150K.bin
