ACLOCAL_AMFLAGS=-I m4

SUBDIRS=fixture

TESTS = 001_simple_fw.test \
	002_resource_subdir.test \
	003_write_offset.test \
	004_env_vars.test \
	005_define.test \
	006_metadata.test \
	007_mbr.test \
	008_partial_mbr.test \
	009_metadata_cmdline.test \
	010_fat_mkfs.test \
	011_fat_setlabel.test \
	012_fat_write.test \
	013_fat_mv.test \
	014_fat_cp.test \
	015_fat_bad_sha2.test \
	016_raw_bad_sha2.test \
	017_fat_rm.test \
	018_numeric_progress.test \
	019_quiet_progress.test \
	020_normal_progress.test \
	021_create_keys.test \
	022_signed_fw.test \
	023_missing_sig.test \
	024_metadata_sig.test \
	025_bad_sig.test \
	026_sign_again.test \
	027_fat_timestamp.test \
	028_osip.test \
	029_5G_offset.test \
	030_2T_offset.test \
	031_fat_mkfs_5G.test \
	032_fat_2T_offset.test \
	033_bad_host_path.test \
	034_missing_host_path.test \
	035_streaming.test \
	036_streaming_signed_fw.test \
	037_streaming_bad_sig.test \
	038_write_15M.test \
	039_upgrade.test \
	041_version.test \
	042_fat_am335x.test \
	043_fat_touch.test \
	044_require_file_exist.test \
	045_legacy_require_partition1.test \
	046_unknown_create_fails.test \
	047_unknown_apply_succeeds.test \
	048_assert_size_less_than_success.test \
	049_assert_size_less_than_fail.test \
	050_assert_size_greater_than_success.test \
	051_assert_size_greater_than_fail.test \
	052_file_concatenation.test \
	053_framed_progress.test \
	054_framed_metadata.test \
	055_metadata_partial_file.test \
	056_list_tasks.test \
	057_list_tasks_empty.test \
	058_framed_list_tasks.test \
	059_framed_error.test \
	060_framed_streaming.test \
	061_framed_partial_metadata.test \
	062_long_meta_conf.test \
	063_detect.test \
	064_mbr_bootcode.test \
	065_fat_mkdir.test \
	066_fat_attrib.test \
	067_usage.test \
	068_readonly_output_error.test \
	069_define_bang.test \
	070_bad_mbr_offset.test \
	071_big_mbr_offset.test \
	072_compression_works.test \
	073_multistep_fat.test \
	074_fat_cache_fail.test \
	075_big_fat_fs.test \
	076_utf8_metadata.test \
	077_fat_empty_file.test \
	078_partial_mbr2.test \
	079_uboot_setenv.test \
	080_uboot_empty_env.test \
	081_uboot_clearenv.test \
	082_uboot_upgrade.test \
	083_uboot_unsetenv.test \
	084_corrupt_uboot.test \
	085_raw_memset.test \
	086_math.test \
	087_crypto_compat.test \
	088_missing_hash.test \
	089_dev_null.test \
	090_sparse_write.test \
	091_sparse_write2.test \
	092_sparse_write3.test \
	093_sparse_concat.test \
	094_sparse_concat2.test \
	095_sparse_apply.test \
	096_missing_resource.test \
	097_reproduceable.test \
	098_sparse_empty.test \
	099_sparse_lasthole.test \
	100_easy_option.test \
	101_progress_range.test \
	102_multi_requires.test \
	103_error_msg.test \
	104_info_msg.test \
	105_require_path_on_device.test \
	106_large_length_field.test \
	107_string_resource.test \
	108_resource_order.test \
	109_includes.test \
	110_compression_level.test \
	111_streaming_exit_fast.test \
	112_fat_rm_missing_file.test \
	113_fat_mv_error_cases.test \
	114_fat_cp_error_cases.test \
	115_fat_mkdir_error_cases.test \
	116_fat_setlabel_error_cases.test \
	117_on_error.test \
	118_fat_touch_error_cases.test \
	119_require_fat_file_match.test \
	120_corrupt_fat.test \
	121_missing_file.test \
	122_missing_file_metadata.test \
	123_double_fat_write.test \
	124_uboot_bad_param.test \
	125_trimmed_upgrade.test \
	126_uboot_recover.test \
	127_extra_metadata.test \
	128_blank_offset.test \
	129_mbr_overflow.test \
	130_media_sizes.test \
	131_raw_key.test \
	132_key_as_param.test \
	133_path_write_file.test \
	134_pipe_write_file.test \
	135_execute.test \
	136_fat_overwrite.test \
	137_path_write_sparse.test \
	138_pipe_write_sparse.test \
	139_mbr_signature.test \
	140_trim.test \
	141_exit_handshake.test \
	142_file_resource_size.test \
	143_include_path.test \
	144_require_version.test \
	145_require_path_at_offset.test \
	146_deploy_variables.test \
	147_multiple_keys.test \
	148_config_from_stdin.test \
	149_too_many_keys.test \
	150_no_sparse.test \
	151_meta_uuid.test \
	152_meta_vars.test \
	153_no_uuid_metadata.test \
	154_bogus_uuid_metadata.test \
	155_friendly_meta_uuid.test \
	156_fat_truncation_bug.test \
	157_create_keys_with_filename.test \
	158_include_anywhere.test \
	159_include_error.test \
	160_mbr_expand.test \
	161_mbr_expand_error.test \
	162_source_date_epoch.test \
	163_gpt.test \
	164_gpt_overlapping_partitions.test \
	165_mbr_overlapping_partitions.test \
	166_gpt_expand.test \
	167_gpt_16_parts.test \
	168_gpt_flags.test \
	169_disk_crypto_aes_cbc_plain.test \
	170_disk_crypto_catches_errors.test \
	171_disk_crypto_aes_cbc_plain_deprecated.test \
	172_delta_upgrade.test \
	173_bad_delta_upgrades.test \
	174_streamed_delta_upgrade.test \
	175_sign_delta_upgrade.test \
	176_newline_in_key.test \
	177_gpt_boot_flag.test \
	178_gpt_bad_flags.test \
	179_verify_detects_raw_corruption.test \
	180_verify_detects_fat_corruption.test \
	181_uboot_overflow.test \
	182_uboot_redundant_setenv.test \
	183_uboot_redundant_empty_env.test \
	184_uboot_redundant_clearenv.test \
	185_uboot_redundant_upgrade.test \
	186_uboot_redundant_unsetenv.test \
	187_corrupt_uboot_redundant.test \
	188_uboot_redundant_bad_param.test \
	189_uboot_redundant_recover.test \
	190_one_metadata_cmdline.test \
	191_disk_crypto_via_env.test \
	192_delta_out_of_bound.test

EXTRA_DIST = $(TESTS) common.sh 1K.bin 1K-corrupt.bin 150K.bin
